// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataStore when create entity then check changed$ 1`] = `
Array [
  StoredEntity {
    "change": null,
    "entity": Object {
      "firstName": "Gaetan",
      "lastName": "REDIN",
    },
  },
]
`;

exports[`DataStore when delete entity then check changed$ 1`] = `
Array [
  StoredEntity {
    "change": null,
    "entity": Object {
      "firstName": "Gaetan",
      "id": 1,
      "lastName": "REDIN",
    },
  },
]
`;

exports[`DataStore when get entity and store contains entity then return it 1`] = `
Object {
  "change": null,
  "entity": Object {
    "firstName": "Gaetan",
    "id": 1,
    "lastName": "REDIN",
  },
}
`;

exports[`DataStore when partialUpdate entity then check changed$ 1`] = `
Array [
  StoredEntity {
    "change": Object {
      "age": 31,
    },
    "entity": Object {
      "firstName": "Gaetan",
      "id": 1,
      "lastName": "REDIN",
    },
  },
]
`;

exports[`DataStore when store 1 entity then check changed$ 1`] = `
Array [
  StoredEntity {
    "change": null,
    "entity": Object {
      "firstName": "Gaetan",
      "lastName": "REDIN",
    },
  },
]
`;

exports[`DataStore when store 2 entities at the same time then check changed$ 1`] = `
Array [
  StoredEntity {
    "change": null,
    "entity": Object {
      "age": 25,
      "firstName": "Elisa",
      "lastName": "REDIN",
    },
  },
  StoredEntity {
    "change": null,
    "entity": Object {
      "firstName": "Gaetan",
      "lastName": "REDIN",
    },
  },
]
`;

exports[`DataStore when store 2 entities one after another then check last changed$ 1`] = `
Array [
  StoredEntity {
    "change": null,
    "entity": Object {
      "age": 25,
      "firstName": "Elisa",
      "lastName": "REDIN",
    },
  },
  StoredEntity {
    "change": null,
    "entity": Object {
      "firstName": "Gaetan",
      "lastName": "REDIN",
    },
  },
]
`;

exports[`DataStore when update entity then check changed$ 1`] = `
Array [
  StoredEntity {
    "change": Object {
      "age": 31,
      "firstName": "Gaetan",
      "id": 1,
      "lastName": "REDIN",
    },
    "entity": Object {
      "firstName": "Gaetan",
      "id": 1,
      "lastName": "REDIN",
    },
  },
]
`;
